Fixing license metadata from ISC -> Apache-2.0

--- a/lib/package.json
+++ b/lib/package.json
@@ -22,7 +22,7 @@
     "list"
   ],
   "author": "mochixuan",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "dependencies": {},
   "devDependencies": {},
   "bugs": {
